--- a/app/templates/partials/connections_list.html
+++ b/app/templates/partials/connections_list.html
@@ -75,7 +75,7 @@
           </div>
           <div class="flex items-center text-sm text-gray-600">
             <i class="fas fa-clock w-4 mr-2"></i>
-            <span>Created {{ connection.created_at.strftime('%Y-%m-%d') }}</span>
+            <span>Created {{ connection.created_at | timestamp_to_date }}</span>
           </div>
         </div>
 
