--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -73,6 +73,13 @@
                 <i class="fas fa-code mr-1"></i>
                 Query
               </a>
+              <a
+                href="/workflow"
+                class="text-gray-500 hover:text-blue-600 px-3 py-2 text-sm font-medium transition-colors"
+              >
+                <i class="fas fa-project-diagram mr-1"></i>
+                Workflow
+              </a>
             </nav>
           </div>
           <div class="flex items-center space-x-4">
